--- a/src/components/sections/ToolsCarousel.astro
+++ b/src/components/sections/ToolsCarousel.astro
@@ -16,61 +16,61 @@
          <div class="tool-carousel flex items-center gap-8 animate-scroll h-[250px]">
             <!-- Primera ronda -->
             <div class="tool-item">
-               <img src="/src/assets/icons/notion.svg" alt="Notion" class="tool-icon" />
+               <img src="/icons/notion.svg" alt="Notion" class="tool-icon" />
                <span class="tool-name">Notion</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/jira.svg" alt="Jira" class="tool-icon" />
+               <img src="/icons/jira.svg" alt="Jira" class="tool-icon" />
                <span class="tool-name">Jira</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/git.svg" alt="Git" class="tool-icon" />
+               <img src="/icons/git.svg" alt="Git" class="tool-icon" />
                <span class="tool-name">Git</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/figma.svg" alt="Figma" class="tool-icon" />
+               <img src="/icons/figma.svg" alt="Figma" class="tool-icon" />
                <span class="tool-name">Figma</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/slack.svg" alt="Slack" class="tool-icon" />
+               <img src="/icons/slack.svg" alt="Slack" class="tool-icon" />
                <span class="tool-name">Slack</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/Trello.svg" alt="Trello" class="tool-icon" />
+               <img src="/icons/trello.svg" alt="Trello" class="tool-icon" />
                <span class="tool-name">Trello</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/miro.svg" alt="Miro" class="tool-icon" />
+               <img src="/icons/miro.svg" alt="Miro" class="tool-icon" />
                <span class="tool-name">Miro</span>
             </div>
 
             <!-- Segunda ronda (duplicado) -->
             <div class="tool-item">
-               <img src="/src/assets/icons/notion.svg" alt="Notion" class="tool-icon" />
+               <img src="/icons/notion.svg" alt="Notion" class="tool-icon" />
                <span class="tool-name">Notion</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/jira.svg" alt="Jira" class="tool-icon" />
+               <img src="/icons/jira.svg" alt="Jira" class="tool-icon" />
                <span class="tool-name">Jira</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/git.svg" alt="Git" class="tool-icon" />
+               <img src="/icons/git.svg" alt="Git" class="tool-icon" />
                <span class="tool-name">Git</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/figma.svg" alt="Figma" class="tool-icon" />
+               <img src="/icons/figma.svg" alt="Figma" class="tool-icon" />
                <span class="tool-name">Figma</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/slack.svg" alt="Slack" class="tool-icon" />
+               <img src="/icons/slack.svg" alt="Slack" class="tool-icon" />
                <span class="tool-name">Slack</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/Trello.svg" alt="Trello" class="tool-icon" />
+               <img src="/icons/trello.svg" alt="Trello" class="tool-icon" />
                <span class="tool-name">Trello</span>
             </div>
             <div class="tool-item">
-               <img src="/src/assets/icons/miro.svg" alt="Miro" class="tool-icon" />
+               <img src="/icons/miro.svg" alt="Miro" class="tool-icon" />
                <span class="tool-name">Miro</span>
             </div>
          </div>
